// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`invalid > all at once 1`] = `
[
  null,
  {
    "a": Symbol(invalidValue),
    "b": true,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": Symbol(invalidValue),
    "b": true,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": Symbol(invalidValue),
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": Symbol(invalidValue),
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": Symbol(invalidValue),
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": null,
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {},
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": null,
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {},
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
  },
  {
    "a": 1,
    "b": false,
    "c": [],
    "d": null,
  },
  {
    "a": 1,
    "b": false,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [],
    "d": {},
  },
  {
    "a": 1,
    "b": false,
    "c": [],
  },
  {
    "a": 1,
    "b": false,
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": Symbol(invalidValue),
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": null,
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {},
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": null,
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {},
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
  },
  {
    "a": 1,
    "b": true,
    "c": [],
    "d": null,
  },
  {
    "a": 1,
    "b": true,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [],
    "d": {},
  },
  {
    "a": 1,
    "b": true,
    "c": [],
  },
  {
    "a": 1,
    "b": true,
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": Symbol(invalidValue),
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": Symbol(invalidValue),
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": Symbol(invalidValue),
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": null,
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {},
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": null,
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {},
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
  },
  {
    "a": 2,
    "b": false,
    "c": [],
    "d": null,
  },
  {
    "a": 2,
    "b": false,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [],
    "d": {},
  },
  {
    "a": 2,
    "b": false,
    "c": [],
  },
  {
    "a": 2,
    "b": false,
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": Symbol(invalidValue),
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      Symbol(invalidValue),
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": null,
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {},
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": null,
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {},
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
  },
  {
    "a": 2,
    "b": true,
    "c": [],
    "d": null,
  },
  {
    "a": 2,
    "b": true,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [],
    "d": {
      "d2": Symbol(invalidValue),
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [],
    "d": {},
  },
  {
    "a": 2,
    "b": true,
    "c": [],
  },
  {
    "a": 2,
    "b": true,
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "b": true,
    "c": [],
    "d": {
      "d2": null,
    },
  },
]
`;

exports[`invalid > array > of a single value 1`] = `
[
  Symbol(invalidValue),
  [
    Symbol(invalidValue),
  ],
]
`;

exports[`invalid > array > of a union 1`] = `
[
  Symbol(invalidValue),
  [
    Symbol(invalidValue),
  ],
  [
    Symbol(invalidValue),
  ],
]
`;

exports[`invalid > array > of an array of an array of a union 1`] = `
[
  Symbol(invalidValue),
  [
    Symbol(invalidValue),
  ],
  [
    [
      Symbol(invalidValue),
    ],
  ],
  [
    [
      [
        Symbol(invalidValue),
      ],
    ],
  ],
  [
    [
      [
        Symbol(invalidValue),
      ],
    ],
  ],
]
`;

exports[`invalid > array > of an array of an array of a value 1`] = `
[
  Symbol(invalidValue),
  [
    Symbol(invalidValue),
  ],
  [
    [
      Symbol(invalidValue),
    ],
  ],
  [
    [
      [
        Symbol(invalidValue),
      ],
    ],
  ],
]
`;

exports[`invalid > object > empty 1`] = `
[
  null,
]
`;

exports[`invalid > object > of a several nested objects with a union property 1`] = `
[
  null,
  {
    "a": null,
  },
  {
    "a": {
      "b": null,
    },
  },
  {
    "a": {
      "b": {
        "c": null,
      },
    },
  },
  {
    "a": {
      "b": {
        "c": {
          "d": Symbol(invalidValue),
        },
      },
    },
  },
  {
    "a": {
      "b": {
        "c": {
          "d": Symbol(invalidValue),
        },
      },
    },
  },
  {
    "a": {
      "b": {
        "c": {},
      },
    },
  },
  {
    "a": {
      "b": {},
    },
  },
  {
    "a": {},
  },
  {},
]
`;

exports[`invalid > object > of a several nested objects with a value property 1`] = `
[
  null,
  {
    "a": null,
  },
  {
    "a": {
      "b": null,
    },
  },
  {
    "a": {
      "b": {
        "c": null,
      },
    },
  },
  {
    "a": {
      "b": {
        "c": {
          "d": Symbol(invalidValue),
        },
      },
    },
  },
  {
    "a": {
      "b": {
        "c": {},
      },
    },
  },
  {
    "a": {
      "b": {},
    },
  },
  {
    "a": {},
  },
  {},
]
`;

exports[`invalid > object > of a several objects with union properties 1`] = `
[
  null,
  {
    "a": null,
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": null,
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": null,
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {},
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": null,
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {},
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": Symbol(invalidValue),
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": Symbol(invalidValue),
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {},
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": null,
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": null,
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {},
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": null,
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {},
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": Symbol(invalidValue),
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": Symbol(invalidValue),
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {},
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": Symbol(invalidValue),
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": Symbol(invalidValue),
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {},
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
]
`;

exports[`invalid > object > of a several objects with value properties 1`] = `
[
  null,
  {
    "a": null,
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": null,
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": null,
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": Symbol(invalidValue),
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": Symbol(invalidValue),
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": Symbol(invalidValue),
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": Symbol(invalidValue),
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
      "a2": Symbol(invalidValue),
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": "A1",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a1": Symbol(invalidValue),
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "a": {
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
  {
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
]
`;

exports[`invalid > object > of a several union properties 1`] = `
[
  null,
  {
    "a": "A1",
    "b": "B1",
    "c": Symbol(invalidValue),
  },
  {
    "a": "A1",
    "b": "B1",
    "c": Symbol(invalidValue),
  },
  {
    "a": "A1",
    "b": "B1",
    "c": Symbol(invalidValue),
  },
  {
    "a": "A1",
    "b": "B1",
  },
  {
    "a": "A1",
    "b": "B2",
    "c": Symbol(invalidValue),
  },
  {
    "a": "A1",
    "b": "B2",
    "c": Symbol(invalidValue),
  },
  {
    "a": "A1",
    "b": "B2",
    "c": Symbol(invalidValue),
  },
  {
    "a": "A1",
    "b": "B2",
  },
  {
    "a": "A1",
    "b": Symbol(invalidValue),
    "c": "C1",
  },
  {
    "a": "A1",
    "b": Symbol(invalidValue),
    "c": "C1",
  },
  {
    "a": "A1",
    "c": "C1",
  },
  {
    "a": Symbol(invalidValue),
    "b": "B1",
    "c": "C1",
  },
  {
    "b": "B1",
    "c": "C1",
  },
]
`;

exports[`invalid > object > of a several value properties 1`] = `
[
  null,
  {
    "a": "A",
    "b": "B",
    "c": Symbol(invalidValue),
  },
  {
    "a": "A",
    "b": "B",
  },
  {
    "a": "A",
    "b": Symbol(invalidValue),
    "c": "C",
  },
  {
    "a": "A",
    "c": "C",
  },
  {
    "a": Symbol(invalidValue),
    "b": "B",
    "c": "C",
  },
  {
    "b": "B",
    "c": "C",
  },
]
`;

exports[`invalid > object > of a single union property 1`] = `
[
  null,
  {
    "a": Symbol(invalidValue),
  },
  {
    "a": Symbol(invalidValue),
  },
  {},
]
`;

exports[`invalid > object > of a single value property 1`] = `
[
  null,
  {
    "a": Symbol(invalidValue),
  },
  {},
]
`;

exports[`invalid > object > of only optional properties 1`] = `
[
  null,
  {
    "a": Symbol(invalidValue),
  },
  {
    "a": 1,
    "b": Symbol(invalidValue),
  },
  {
    "a": 1,
    "b": 2,
    "c": Symbol(invalidValue),
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": Symbol(invalidValue),
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": 4,
    "e": Symbol(invalidValue),
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": 4,
    "e": 5,
    "f": Symbol(invalidValue),
  },
]
`;

exports[`invalid > object > of several optional properties 1`] = `
[
  null,
  {
    "a": Symbol(invalidValue),
    "c": 3,
  },
  {
    "a": 1,
    "b": Symbol(invalidValue),
    "c": 3,
  },
  {
    "a": 1,
    "b": 2,
    "c": Symbol(invalidValue),
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": Symbol(invalidValue),
  },
  {
    "a": 1,
    "b": 2,
  },
  {
    "c": 3,
  },
]
`;

exports[`invalid > union > of a single value 1`] = `
[
  Symbol(invalidValue),
]
`;

exports[`invalid > union > of a union 1`] = `
[
  Symbol(invalidValue),
  Symbol(invalidValue),
  Symbol(invalidValue),
]
`;

exports[`invalid > union > of several values 1`] = `
[
  Symbol(invalidValue),
  Symbol(invalidValue),
  Symbol(invalidValue),
]
`;

exports[`invalid > union > of unions 1`] = `
[
  Symbol(invalidValue),
  Symbol(invalidValue),
  Symbol(invalidValue),
  Symbol(invalidValue),
]
`;

exports[`invalid > value > null 1`] = `
[
  Symbol(invalidValue),
]
`;

exports[`invalid > value > number 1`] = `
[
  Symbol(invalidValue),
]
`;

exports[`invalid > value > string 1`] = `
[
  Symbol(invalidValue),
]
`;

exports[`modelToCombinator > AliasType > simple 1`] = `
[
  Reference {
    "isValid": true,
    "typeName": "Foo",
  },
]
`;

exports[`modelToCombinator > AliasType > two in a union 1`] = `
[
  Reference {
    "isValid": true,
    "typeName": "Foo",
  },
  Reference {
    "isValid": true,
    "typeName": "Bar",
  },
]
`;

exports[`valid > all at once 1`] = `
[
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [],
    "d": {
      "d2": undefined,
    },
  },
]
`;

exports[`valid > array > of a single value 1`] = `
[
  [
    1,
  ],
  [],
]
`;

exports[`valid > array > of a union 1`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [],
]
`;

exports[`valid > array > of an array of an array of a union 1`] = `
[
  [
    [
      [
        1,
      ],
    ],
  ],
  [
    [
      [
        2,
      ],
    ],
  ],
  [
    [
      [],
    ],
  ],
  [
    [],
  ],
  [],
]
`;

exports[`valid > array > of an array of an array of a value 1`] = `
[
  [
    [
      [
        1,
      ],
    ],
  ],
  [
    [
      [],
    ],
  ],
  [
    [],
  ],
  [],
]
`;

exports[`valid > object > empty 1`] = `
[
  {},
]
`;

exports[`valid > object > of a several nested objects with a union property 1`] = `
[
  {
    "a": {
      "b": {
        "c": {
          "d": "D1",
        },
      },
    },
  },
  {
    "a": {
      "b": {
        "c": {
          "d": "D2",
        },
      },
    },
  },
]
`;

exports[`valid > object > of a several nested objects with a value property 1`] = `
[
  {
    "a": {
      "b": {
        "c": {
          "d": "D",
        },
      },
    },
  },
]
`;

exports[`valid > object > of a several objects with union properties 1`] = `
[
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC2",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC2",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC2",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC2",
    },
  },
]
`;

exports[`valid > object > of a several objects with value properties 1`] = `
[
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
]
`;

exports[`valid > object > of a several union properties 1`] = `
[
  {
    "a": "A1",
    "b": "B1",
    "c": "C1",
  },
  {
    "a": "A1",
    "b": "B1",
    "c": "C2",
  },
  {
    "a": "A1",
    "b": "B1",
    "c": "C3",
  },
  {
    "a": "A1",
    "b": "B2",
    "c": "C1",
  },
  {
    "a": "A1",
    "b": "B2",
    "c": "C2",
  },
  {
    "a": "A1",
    "b": "B2",
    "c": "C3",
  },
]
`;

exports[`valid > object > of a several value properties 1`] = `
[
  {
    "a": "A",
    "b": "B",
    "c": "C",
  },
]
`;

exports[`valid > object > of a single union property 1`] = `
[
  {
    "a": "A1",
  },
  {
    "a": "A2",
  },
]
`;

exports[`valid > object > of a single value property 1`] = `
[
  {
    "a": "A",
  },
]
`;

exports[`valid > object > of only optional properties 1`] = `
[
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": 4,
    "e": 5,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": 4,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": 4,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "e": 5,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
  },
  {
    "a": 1,
    "b": 2,
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
    "d": 4,
    "e": 5,
  },
  {
    "a": 1,
    "b": 2,
    "d": 4,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
    "d": 4,
  },
  {
    "a": 1,
    "b": 2,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
    "e": 5,
  },
  {
    "a": 1,
    "b": 2,
    "f": 6,
  },
  {
    "a": 1,
    "b": 2,
  },
  {
    "a": 1,
    "c": 3,
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "c": 3,
    "d": 4,
    "e": 5,
  },
  {
    "a": 1,
    "c": 3,
    "d": 4,
    "f": 6,
  },
  {
    "a": 1,
    "c": 3,
    "d": 4,
  },
  {
    "a": 1,
    "c": 3,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "c": 3,
    "e": 5,
  },
  {
    "a": 1,
    "c": 3,
    "f": 6,
  },
  {
    "a": 1,
    "c": 3,
  },
  {
    "a": 1,
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "d": 4,
    "e": 5,
  },
  {
    "a": 1,
    "d": 4,
    "f": 6,
  },
  {
    "a": 1,
    "d": 4,
  },
  {
    "a": 1,
    "e": 5,
    "f": 6,
  },
  {
    "a": 1,
    "e": 5,
  },
  {
    "a": 1,
    "f": 6,
  },
  {
    "a": 1,
  },
  {
    "b": 2,
    "c": 3,
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "b": 2,
    "c": 3,
    "d": 4,
    "e": 5,
  },
  {
    "b": 2,
    "c": 3,
    "d": 4,
    "f": 6,
  },
  {
    "b": 2,
    "c": 3,
    "d": 4,
  },
  {
    "b": 2,
    "c": 3,
    "e": 5,
    "f": 6,
  },
  {
    "b": 2,
    "c": 3,
    "e": 5,
  },
  {
    "b": 2,
    "c": 3,
    "f": 6,
  },
  {
    "b": 2,
    "c": 3,
  },
  {
    "b": 2,
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "b": 2,
    "d": 4,
    "e": 5,
  },
  {
    "b": 2,
    "d": 4,
    "f": 6,
  },
  {
    "b": 2,
    "d": 4,
  },
  {
    "b": 2,
    "e": 5,
    "f": 6,
  },
  {
    "b": 2,
    "e": 5,
  },
  {
    "b": 2,
    "f": 6,
  },
  {
    "b": 2,
  },
  {
    "c": 3,
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "c": 3,
    "d": 4,
    "e": 5,
  },
  {
    "c": 3,
    "d": 4,
    "f": 6,
  },
  {
    "c": 3,
    "d": 4,
  },
  {
    "c": 3,
    "e": 5,
    "f": 6,
  },
  {
    "c": 3,
    "e": 5,
  },
  {
    "c": 3,
    "f": 6,
  },
  {
    "c": 3,
  },
  {
    "d": 4,
    "e": 5,
    "f": 6,
  },
  {
    "d": 4,
    "e": 5,
  },
  {
    "d": 4,
    "f": 6,
  },
  {
    "d": 4,
  },
  {
    "e": 5,
    "f": 6,
  },
  {
    "e": 5,
  },
  {
    "f": 6,
  },
  {},
]
`;

exports[`valid > object > of several optional properties 1`] = `
[
  {
    "a": 1,
    "b": 2,
    "c": 3,
    "d": 4,
  },
  {
    "a": 1,
    "b": 2,
    "c": 3,
  },
  {
    "a": 1,
    "c": 3,
    "d": 4,
  },
  {
    "a": 1,
    "c": 3,
  },
]
`;

exports[`valid > union > of a single value 1`] = `
[
  1,
]
`;

exports[`valid > union > of a union 1`] = `
[
  1,
  2,
  3,
]
`;

exports[`valid > union > of several values 1`] = `
[
  1,
  2,
  3,
]
`;

exports[`valid > union > of unions 1`] = `
[
  1,
  2,
  3,
  4,
]
`;

exports[`valid > value > null 1`] = `
[
  null,
]
`;

exports[`valid > value > number 1`] = `
[
  1,
]
`;

exports[`valid > value > string 1`] = `
[
  "a",
]
`;
